# DeepGEMM

./: .clangd  .gitignore  README-zh.md  develop.sh  pyproject.toml
docs/zh/: build-and-test.md
scripts/: test_all.sh
