[project]
name = "deepgemm"
version = "0.1.0"
description = "Drew DeepGEMM, Learning Hopper: TMA, Warp Specialization)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keep-gpu>=0.4.1",
    "numpy>=2.4.0",
    "packaging>=25.0",
    "pip>=25.3",
    "pytest>=9.0.2",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
]

[tool.uv.extra-build-dependencies]
deepgemm = ["torch"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
